[package]
name = "xfade"
version = "0.1.0"
authors = ["Alex Norman <alex@x37v.info>"]
edition = "2018"

[lib]
name = "xfade"
crate-type = ["cdylib"]

[dependencies]
pd-sys = { path = "../../pd-sys" }
pd-ext = { path = "../../external" }
pd-ext-macros = { path = "../../macros" }
itertools = "0.8.0"
num = "0.2.0"
